--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>index_extension_vendor_image_safe.html</title>
+  <title>index_extension_vendor_image_safe_v2_thumb_name_under.html</title>
   <style>
     :root{
       /* Premium Light theme */
@@ -542,7 +542,7 @@ label[for="emplacement"] {
 </head>
 <body>
 
-<div style="font-size:11px;color:#888;padding:6px 10px;">index_extension_vendor_image_safe.html</div>
+<div style="font-size:11px;color:#888;padding:6px 10px;">index_extension_vendor_image_safe_v2_thumb_name_under.html</div>
 
 
 <header>
@@ -858,7 +858,29 @@ label[for="emplacement"] {
           <div class="offer" data-id="${escapeHtml(o.id)}" data-created="${escapeHtml(o.createdAt || "")}">
             <div class="top">
               ${u.context === "acheteur"
-                ? `<div style="margin-bottom:6px">Vendeur : <b><span class="sellerLink" data-seller-id="${escapeHtml(o.sellerId)}">${escapeHtml(o.sellerName || "-")}</span></b></div>`
+                ? `
+                  <div style="margin-bottom:12px; display:flex; flex-direction:column; align-items:flex-start; gap:6px">
+                    ${(() => {
+                      try{
+                        const imgs = JSON.parse(localStorage.getItem("vendor.image.v1") || "{}");
+                        const img = imgs[o.sellerId] || null;
+                        if (img) {
+                          return `
+                            <div style="width:70px;height:70px;border-radius:14px;overflow:hidden">
+                              <img src="${img}" style="width:100%;height:100%;object-fit:cover">
+                            </div>
+                          `;
+                        }
+                      }catch(e){}
+                      return ``;
+                    })()}
+                    <div style="font-weight:600">
+                      <span class="sellerLink" data-seller-id="${escapeHtml(o.sellerId)}">
+                        ${escapeHtml(o.sellerName || "-")}
+                      </span>
+                    </div>
+                  </div>
+                `
                 : ``}
 
               <div>
