--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>index_master_base_v2_qr_clean_safe.html</title>
+  <title>index_master_base_v3_auto_start_scan.html</title>
   <style>
     :root{
       /* Premium Light theme */
@@ -577,7 +577,7 @@ label[for="emplacement"] {
 </head>
 <body>
 
-<div style="font-size:11px;color:#888;padding:6px 10px;">index_master_base_v2_qr_clean_safe.html</div>
+<div style="font-size:11px;color:#888;padding:6px 10px;">index_master_base_v3_auto_start_scan.html</div>
 
 
 <header>
@@ -1532,6 +1532,11 @@ document.getElementById("pub").addEventListener("click", () => {
     }
 
     if (tab === "Scan") {
+      setTimeout(() => {
+        if (typeof startScanner === "function") {
+          startScanner();
+        }
+      }, 0);
 
   if (u.context !== "vendeur") {
     content.innerHTML = `<div class="card"></div>`;
