--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>index_master_base_v2_qr_clean_safe.html</title>
+  <title>index_master_base_v4_scan_square_no_geo_alert.html</title>
   <style>
     :root{
       /* Premium Light theme */
@@ -258,6 +258,16 @@
     display:block;
   }
 
+
+  /* Scan square camera */
+  #reader, #reader video {
+    aspect-ratio: 1 / 1;
+    width: 100%;
+    max-width: 420px;
+    margin: 0 auto;
+    object-fit: cover;
+  }
+
 </style>
 
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
@@ -386,7 +396,7 @@ document.addEventListener("click", e=>{
   if(e.target.id==="geoBuyerBtn"){
     navigator.geolocation.getCurrentPosition(pos=>{
       setGeo(userSelect.value,pos.coords.latitude,pos.coords.longitude);
-      alert("Position mise à jour");
+      
     });
   }
 });
@@ -577,7 +587,7 @@ label[for="emplacement"] {
 </head>
 <body>
 
-<div style="font-size:11px;color:#888;padding:6px 10px;">index_master_base_v2_qr_clean_safe.html</div>
+<div style="font-size:11px;color:#888;padding:6px 10px;">index_master_base_v4_scan_square_no_geo_alert.html</div>
 
 
 <header>
@@ -1532,6 +1542,9 @@ document.getElementById("pub").addEventListener("click", () => {
     }
 
     if (tab === "Scan") {
+      setTimeout(() => {
+        if (typeof startScanner === "function") startScanner();
+      }, 0);
 
   if (u.context !== "vendeur") {
     content.innerHTML = `<div class="card"></div>`;
@@ -1734,7 +1747,7 @@ document.addEventListener("click", e=>{
   if(e.target.id==="geoBuyerBtn"){
     navigator.geolocation.getCurrentPosition(pos=>{
       setGeo(userSelect.value,pos.coords.latitude,pos.coords.longitude);
-      alert("Position mise à jour");
+      
     });
   }
 });
@@ -2077,6 +2090,30 @@ function stopScanner(){
 
   observer.observe(document.getElementById("content"), { childList: true });
 
+})();
+</script>
+
+
+<script>
+(function(){
+  const originalStart = window.startScanner;
+  const originalStop = window.stopScanner;
+
+  if (originalStart) {
+    window.startScanner = function(){
+      const btn = document.getElementById("startScanBtn");
+      if (btn) btn.style.display = "none";
+      return originalStart.apply(this, arguments);
+    };
+  }
+
+  if (originalStop) {
+    window.stopScanner = function(){
+      const btn = document.getElementById("startScanBtn");
+      if (btn) btn.style.display = "inline-block";
+      return originalStop.apply(this, arguments);
+    };
+  }
 })();
 </script>
 
